--- a/.github/workflows/docs-check.yml
+++ b/.github/workflows/docs-check.yml
@@ -109,6 +109,7 @@ jobs:
       - name: Test Documentation
         env:
           SPHINX_MOCK_REQUIREMENTS: 0
+          FIFTYONE_DO_NOT_TRACK: true
         run: |
           # First run the same pipeline as Read-The-Docs
           apt-get update && sudo apt-get install -y cmake
